src/objects/Promotion_Eligibility_Rule__c.object
<CustomObject>
    <fields>
        <fullName>Current_Platform__c</fullName>
        <label>Current Platform</label>
        <picklist>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smartphone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All-In-One</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days__c</fullName>
        <label>Days</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eligibility_Rule__c</fullName>
        <label>Eligibility Rule</label>
        <referenceTo>Eligibility_Rule__c</referenceTo>
        <relationshipLabel>Promotion Eligibility Rules</relationshipLabel>
        <relationshipName>Promotion_Eligibility_Rules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Package_List__c</fullName>
        <label>Package List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Prod_Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Family</label>
        <referenceTo>Product_Family__c</referenceTo>
        <relationshipLabel>Promotion Eligibility Rules</relationshipLabel>
        <relationshipName>Promotion_Eligibility_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <picklist>
            <picklistValues>
                <fullName>ST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TUP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TUPJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TABL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WSJA</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Promotion__c</fullName>
        <label>Promotion</label>
        <referenceTo>Promotion__c</referenceTo>
        <relationshipLabel>Promotion Eligibility Rules</relationshipLabel>
        <relationshipName>Promotion_Eligibility_Rules</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Promotion Eligibility Rule</label>
    <nameField>
        <displayFormat>PER-{00000000}</displayFormat>
        <label>Promotion Eligibility Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotion Eligibility Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Date</fullName>
        <active>true</active>
        <description>If Date is defined, the Days must be null.</description>
        <errorConditionFormula>NOT(ISBLANK(Days__c)) &amp;&amp; NOT(ISBLANK(Date__c))</errorConditionFormula>
        <errorDisplayField>Days__c</errorDisplayField>
        <errorMessage>You cannot fill both Date and Days. Please fill only one.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Days</fullName>
        <active>true</active>
        <description>If Days is defined, the Date field must be null.</description>
        <errorConditionFormula>NOT(ISBLANK(Days__c)) &amp;&amp; NOT(ISBLANK(Date__c))</errorConditionFormula>
        <errorDisplayField>Date__c</errorDisplayField>
        <errorMessage>You cannot fill both Days and Date. Please fill only one.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Days_or_Date</fullName>
        <active>false</active>
        <description>Either Days or Date must be filled.</description>
        <errorConditionFormula>ISBLANK(Date__c) &amp;&amp; ISBLANK(Days__c)</errorConditionFormula>
        <errorMessage>Either Days or Date must be filled.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Package_List</fullName>
        <active>true</active>
        <description>Must require a value.</description>
        <errorConditionFormula>ISBLANK(Package_List__c)</errorConditionFormula>
        <errorDisplayField>Package_List__c</errorDisplayField>
        <errorMessage>Package List must not null.</errorMessage>
    </validationRules>
</CustomObject>